Added multiple video frame

--- a/sketch.html
+++ b/sketch.html
@@ -10,6 +10,12 @@
 
   </head>
   <body>
+    <div id = "p5sketch">
+    <!-- p5 instance will be created here -->
+    </div>
+    <div id = "p5sketch2">
+    <!-- p5 instance will be created here -->
+    </div>
     <script src="sketch.js"></script>
   </body>
 </html>
