Pose Data Compression and Sync

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 	</div>
 	<div id="container">
 		<div id="first">
-			<h1 style = "color:#0e8f8a">Select Video 1</h1>
+			<h1 style = "color:#0e8f8a;font-size: 40px;">Select Video 1</h1>
 			<br>
 			<input type="file" id="video1" name="video1" accept="video/*">
 		</div>
 		<div id="second">
-			<h1 style = "color:#0e8f8a">Select Video 2</h1>
+			<h1 style = "color:#0e8f8a;font-size: 40px;">Select Video 2</h1>
 			<br>
 			<input type="file" id="video2" name="video2" accept="video/*">
 		</div>
