--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>  
 
   <script src="sketch.js"></script>
-
+  <script>(function(e,t,n){var r=e.querySelectorAll("html")[0];r.className=r.className.replace(/(^|\s)no-js(\s|$)/,"$1js$2")})(document,window,0);</script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/component.css" />
   <meta charset="utf-8">
 </head>
 
@@ -23,24 +24,53 @@
 		<p>Enter some videos to compare</p>
 	</div>
 	<div id="container">
-		<div id="first">
+		<div id = "first">
+			<h1 style = "color:#0e8f8a;font-size: 40px;">Select Video 1</h1>
+			<input type="file" accept="video/*" name="file-1[]" id="file-1" class="inputfile inputfile-2" onchange = "onInputChange()"/>
+			<label for="file-1">
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+					<path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/>
+				</svg> 
+				<span>Upload Video&hellip;</span>
+			</label>
+		</div>
+		<div id = "second">
+			<h1 style = "color:#0e8f8a;font-size: 40px;">Select Video 2</h1>
+			<input type="file" accept="video/*" name="file-2[]" id="file-2" class="inputfile inputfile-2" onchange="onInputChange()"/>
+			<label for="file-2">
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+					<path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/>
+				</svg> 
+				<span>Upload Video&hellip;</span>
+			</label>
+		</div>
+		<!-- <div id="first">
 			<h1 style = "color:#0e8f8a;font-size: 40px;">Select Video 1</h1>
 			<br>
-			<input type="file" id="video1" name="video1" accept="video/*">
-		</div>
-		<div id="second">
+			<label for="video1" class="custom-file-upload">
+				<i class="fa fa-cloud-upload"></i> Upload
+			</label>
+			<input id="video1" type="file" name="video1" accept="video/*" onchange = "onInputChange()"/>
+		</div> -->
+		<!-- <div id="second">
 			<h1 style = "color:#0e8f8a;font-size: 40px;">Select Video 2</h1>
 			<br>
-			<input type="file" id="video2" name="video2" accept="video/*">
-		</div>
+			<input type="file" id="video2" name="video2" accept="video/*" onchange="onInputChange()">
+			<label for="file">Choose a file</label>
+		</div> -->
 		<div id="clear">
-			<button type="button" id = "spot" onclick="handleSpot()">Start Spotting</button>
-			
+			<button id = "spot" onclick="handleSpot()" disabled>Start Spotting</button>
 		</div>
 		<br>
+		<div id = "message" style = "color:#0a5552;font-size: 25px;display:none">
+			<br>
+				Spotting differences....
+			<br>
+			<br>
+		</div>
 		<br>
 		<div>
-			<button type="button" id = "spot" onclick="handleView()">View Analysis</button>
+			<button id = "view" onclick="handleView()" disabled>View Analysis</button>
 		</div>
 	</div>
 
@@ -56,6 +86,7 @@
 	<br><br>
 	<br><br>
 	<br><br>
+	<script src="js/custom-file-input.js"></script>
 </body>
 
 </html>
