--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<div id="header">
 		<h1>Welcome To Spotter!</h1> 
-		<p>Enter some videos to compare</p>
+		<p>Enter some dance videos to compare</p>
 	</div>
 	<div id="container">
 		<div id = "first">
